Added two symlinks

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Scratchpad
 
 # BBEdit’s own read-me file
 Read\ Me.txt
+Preview CSS/DefaultCSS_Markdown.css
+
+Preview Filters/DefaultFilter_Markdown.rb
